src/system/lib.cr

require "../config"
@[Link("voidcsfml-system")]
lib VoidCSFML
  fun time_initialize(self : Void*)
  fun time_asseconds(self : Void*, result : LibC::Float*)
  fun time_asmilliseconds(self : Void*, result : Int32*)
  fun time_asmicroseconds(self : Void*, result : Int64*)
  fun operator_eq_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_ne_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_lt_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_gt_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_le_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_ge_f4Tf4T(left : Void*, right : Void*, result : Bool*)
  fun operator_sub_f4T(right : Void*, result : Void*)
  fun operator_add_f4Tf4T(left : Void*, right : Void*, result : Void*)
  fun operator_sub_f4Tf4T(left : Void*, right : Void*, result : Void*)
  fun operator_mul_f4TBw9(left : Void*, right : LibC::Float, result : Void*)
  fun operator_mul_f4TG4x(left : Void*, right : Int64, result : Void*)
  fun operator_div_f4TBw9(left : Void*, right : LibC::Float, result : Void*)
  fun operator_div_f4TG4x(left : Void*, right : Int64, result : Void*)
  fun operator_div_f4Tf4T(left : Void*, right : Void*, result : LibC::Float*)
  fun operator_mod_f4Tf4T(left : Void*, right : Void*, result : Void*)
  fun time_initialize_PxG(self : Void*, copy : Void*)
  fun seconds_Bw9(amount : LibC::Float, result : Void*)
  fun milliseconds_qe2(amount : Int32, result : Void*)
  fun microseconds_G4x(amount : Int64, result : Void*)
  fun clock_initialize(self : Void*)
  fun clock_getelapsedtime(self : Void*, result : Void*)
  fun clock_restart(self : Void*, result : Void*)
  fun clock_initialize_LuC(self : Void*, copy : Void*)
  $inputstream_read_callback : Void*, Void*, Int64, Int64* ->
  $inputstream_seek_callback : Void*, Int64, Int64* ->
  $inputstream_tell_callback : Void*, Int64* ->
  $inputstream_getsize_callback : Void*, Int64* ->
  fun inputstream_initialize(self : Void*)
  fun inputstream_initialize_mua(self : Void*, copy : Void*)
  fun fileinputstream_initialize(self : Void*)
  fun fileinputstream_finalize(self : Void*)
  fun fileinputstream_open_zkC(self : Void*, filename_size : LibC::SizeT, filename : LibC::Char*, result : Bool*)
  fun fileinputstream_read_xALG4x(self : Void*, data : UInt8*, size : Int64, result : Int64*)
  fun fileinputstream_seek_G4x(self : Void*, position : Int64, result : Int64*)
  fun fileinputstream_tell(self : Void*, result : Int64*)
  fun fileinputstream_getsize(self : Void*, result : Int64*)
  fun memoryinputstream_initialize(self : Void*)
  fun memoryinputstream_open_5h8vgv(self : Void*, data : UInt8*, size_in_bytes : LibC::SizeT)
  fun memoryinputstream_read_xALG4x(self : Void*, data : UInt8*, size : Int64, result : Int64*)
  fun memoryinputstream_seek_G4x(self : Void*, position : Int64, result : Int64*)
  fun memoryinputstream_tell(self : Void*, result : Int64*)
  fun memoryinputstream_getsize(self : Void*, result : Int64*)
  fun memoryinputstream_initialize_kYd(self : Void*, copy : Void*)
  fun mutex_initialize(self : Void*)
  fun mutex_finalize(self : Void*)
  fun mutex_lock(self : Void*)
  fun mutex_unlock(self : Void*)
  fun sleep_f4T(duration : Void*)
  fun thread_initialize_XPcbdx(self : Void*, function : (Void*)->, argument : Void*)
  fun thread_finalize(self : Void*)
  fun thread_launch(self : Void*)
  fun thread_wait(self : Void*)
  fun thread_terminate(self : Void*)
  fun sfml_system_version(LibC::Int*, LibC::Int*, LibC::Int*)
end
